# parpr0g

./: bashrc  laba1_lin.drawio  laba1_par.drawio  laba2_lin.drawio  laba2_par.drawio  laba3_lin.drawio  laba3_par.drawio  laba4_lin.drawio  laba4_par.drawio  РГЗ Пар прог.docx
Ivan/: main.cpp  Инструкция.docx  РГЗ Пар прог.docx
Ivan/lab2/: CMakeLists.txt
Ivan/lab3/: CMakeLists.txt  Инструкция.docx
Ivan/lab4/: CMakeLists.txt  Инструкция.docx
Michail/laba2/: CMakeLists.txt  main  main.cu  run  Инструкция.docx
Michail/laba3/: CMakeLists.txt  (+1 more)
lab1/: CMakeLists.txt  copy.cpp  main.cpp  run  Алгоритм laba1 линель.drawio  Алгоритм laba1 параллель.drawio  Алгоритм laba1 параллельv2.drawio  Инструкция.docx
lab1_again_2/: CMakeLists.txt  main.cpp  Инструкция.docx
lab1_orig/: CMakeLists.txt  main.cpp
lab3/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp  test  Алгоритм laba3 линель.drawio  Алгоритм laba3 параллель.drawio  Инструкция.docx
laba1_clear/: CMakeLists.txt  linel.drawio  main.cpp  michail.cpp  parallel.drawio  run  Инструкция.docx
laba2/: CMakeLists.txt  Makefile  howtomakefile  info  main.cu  mat.h  matrixer.cu  matrixer.h  run  Алгоритм laba2 линель.drawio  Алгоритм laba2 параллель.drawio  Инструкция.docx
laba2_orig/: CMakeLists.txt  main.cpp
laba3_orig/: CMakeLists.txt  main.cpp
laba4/: CMakeLists.txt  main  main.cpp  matrixMul.c  output_gpu  refactor.cpp  run.md  trycopy.cpp  Алгоритм laba4 линель.drawio  Алгоритм laba4 параллель.drawio  Инструкция.docx
laba4_downloaded/: CMakeLists.txt  main.cpp
laba4_orig/: CMakeLists.txt  main.cpp
(+9 files in other folders)
